# TADGATE

./: LICENSE  README.md  parameters.txt  pyproject.toml  requirement.txt  setup.py
TADGATE/: Call_TADs.py  Plot_Function.py  TADGATE_CLI.py  TADGATE_main.py  TADGATE_pyG.py  TADGATE_utils.py  __init__.py  gat_conv.py
TADGATE.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Tutorial/: TADGATE_usage.ipynb
