[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TADGATE"
version = "1.0.0"
authors = [
  { name="Dachang Dang", email="dangdachang@163.com"},
]
description = "Uncovering topologically associating domains from three-dimensional genome maps with TADGATE"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.20.3",
        "pandas>=1.4.1",
        "scipy>=1.7.3",
        "seaborn>=0.12.2",
        "h5py>=3.6.0",
        "scanpy>=1.8.2",
        "scikit-learn>=1.0.2",
		"scikit-image>=0.18.3",
		"rpy2>=3.1.0",
		"umap-learn>=0.5.2",
		"tqdm>=4.63.1",
        "matplotlib>=3.5.1",
		"torch>=1.8.2",
		"torch-geometric>=2.0.1",
        "torch-cluster>=1.5.9",
		"torch-scatter>=2.0.8",
		"torch-sparse>=0.6.12"
    ]

[project.urls]
"Homepage" = "https://github.com/zhanglabtools/TADGATE"